# fullstack-vue-django-app

./: README.md  index.html
assets/: about-view.2436494a.js  about-view.5ae290c1.js  about-view.9be72b17.js  about-view.a78b2f85.js  index.2f834495.js  index.51e3b959.js  index.64f3437f.js  index.7aff944f.css  index.b857cc95.js  login-view.029770a7.js  login-view.67c204ff.js  login-view.71cbb890.js  login-view.a498c7d3.js  main-layout.075de06f.js  main-layout.21fc7523.js  main-layout.366a8f88.js  main-layout.622f32b3.css  main-layout.bc0eab9d.js  question-view.20642af3.js  question-view.59de05b2.css  question-view.71a76f5b.js  question-view.a55a419e.js  question-view.dbff92e5.js  users-list-view.01052e1b.js  users-list-view.1d95b5b0.js  users-list-view.88f8a6e9.css  users-list-view.986c224c.js  (+1 more)
server/: .gitignore  README.md  dev-requirements.in  pyproject.toml  requirements.in  requirements.txt
server/social/: settings.py  urls.py
server/social/apps/answer/: apps.py  models.py  serializers.py
server/social/apps/answer/migrations/: 0001_initial.py  0002_alter_answer_question.py
server/social/apps/authentication/: apps.py  urls.py  views.py
server/social/apps/question/: apps.py  models.py  serializers.py  views.py
server/social/apps/question/migrations/: 0001_initial.py  0002_initial.py  0003_alter_question_disliked_by_alter_question_liked_by_and_more.py
server/social/apps/user/: apps.py  models.py  serializers.py  views.py
server/social/apps/user/migrations/: 0001_initial.py
server/social/core/: apps.py
server/social/settings/: default.py  dev.py
(+35 files in other folders)
