[project]
name = "social app"
version = "0.1.0"
[tool.poetry]
name = "social-app-server"
version = "0.1.0"
description = ""
authors = ["sagadav <artursagadeev97@gmail.com>"]
readme = "README.md"
packages = [{include = "social"}]

[tool.poetry.scripts]
start = "python manage.py runserver"

[tool.poetry.dependencies]
python = "^3.8"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.2.2"
pyjwt = "^2.6.0"
django-cors-headers = "^3.13.0"
django = "^4.1.5"
mysqlclient = "^2.1.1"


[tool.poetry.group.dev.dependencies]
autopep8 = "2.0.0"
flake8 = "5.0.4"
flake8-django = "^1.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
